fix about-container width and svg on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -277,7 +277,7 @@ input{
 }
 
 .tech-icons{
-  margin: 40px 0 80px 0;
+  margin: 40px 0;
   border-radius: 30px;
 }
 
@@ -339,12 +339,14 @@ input{
 }
 
 svg{
+  width: 90%;
+  margin: 40px 5% 0 5%;
   box-shadow: var(--shadow);
   border-radius: 30px;
 }
 
 .SVGlegend{
-  margin: 2px 3%;
+  margin: 2px 8%;
   padding-top: 1px;
   color: var(--grey);
   text-decoration: none;
@@ -520,10 +522,6 @@ footer {
     text-align: center;
   }
 
-  .about-container{
-    margin: 0 100px;
-  }
-
   .tech-icons{
     margin: 40px 0;
   }
@@ -543,12 +541,6 @@ footer {
   .tech-icon__item:active img {
     opacity: 1;
     transform: none;
-  }
-
-  svg{
-    width: 70%;
-    margin: 0 15%;
-    font-size: 6;
   }
 
   .SVGlegend{
@@ -621,7 +613,7 @@ footer {
   .SVGlegend{
     font-size: 6px;
   }
-  
+
   .work-container{
     margin: 0 20px;
   }
